[tool.poetry]
name = "flockwave-logger"
version = "1.7.2"
description = "Basic colored logger for Skybrush server and related projects"
authors = ["Tamas Nepusz <tamas@collmot.com>"]
packages = [
    { include = "flockwave", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.7"
colorlog = "5.0.1"
colorama = { version = "^0.4.4", markers = "os_name == 'nt'" }
hexdump = "^3.3"
python-json-logger = "^2.0.2"

[tool.poetry.dev-dependencies]

[[tool.poetry.source]]
name = "collmot"
url = "https://pypi.collmot.com/simple/"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
