[tool.poetry]
name = "flockwave-logger"
version = "1.9.0"
description = "Basic colored logger for Skybrush server and related projects"
authors = ["Tamas Nepusz <tamas@collmot.com>"]
packages = [
    { include = "flockwave", from = "src" }
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
colorlog = "^6.7.0"
colorama = { version = "^0.4.4", markers = "os_name == 'nt'" }
hexdump = "^3.3"
python-json-logger = "^2.0.2"

[tool.poetry.dev-dependencies]

[[tool.poetry.source]]
name = "collmot"
url = "https://pypi.collmot.com/simple/"
secondary = true

[[tool.poetry.source]]
name = "fury"
url = "https://pypi.fury.io/skybrush/"
secondary = true

[tool.ruff]
ignore = ["B905", "E402", "E501"]
line-length = 80
select = ["B", "C", "E", "F", "W"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
