[project]
name = "flockwave-logger"
version = "2.1.1"
description = "Basic colored logger for Skybrush server and related projects"
authors = [{ name = "Tamas Nepusz", email = "tamas@collmot.com" }]
license = "MIT"
requires-python = ">=3.9"
dependencies = [
  "colorlog>=6.9.0",
  "colorama>=0.4.6; os_name == 'nt'",
  "python-json-logger>=3.2.1",
]

[tool.uv.build-backend]
module-name = "flockwave.logger"

[[tool.uv.index]]
name = "collmot"
url = "https://pypi.collmot.com/simple/"
publish-url = "https://pypi.collmot.com/"
explicit = true

[[tool.uv.index]]
name = "fury"
url = "https://pypi.fury.io/skybrush/"
publish-url = "https://pypi.fury.io/skybrush/"

[tool.ruff]
lint.ignore = ["B905", "E402", "E501"]
lint.select = ["B", "C", "E", "F", "W"]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
